<resources>
    <string name="app_name">Štempl</string>
    <string name="name">Name</string>
    <string name="add_person">Add Person</string>
    <string name="title_activity_pin_lock">PinLockActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="pin">PIN</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="info">INFO</string>
    <string name="title_settings">Settings</string>
    <string name="enter_admin_pin">Enter Admin PIN</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="at">at</string>
</resources>