<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutrow_event"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:screenOrientation="landscape"
    android:clickable="true"
    android:minHeight="96dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tbCheckInOut"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/toggle_day_bg_selector"
        android:textOff="@string/check_in"
        android:textOn="@string/check_out"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btInfo"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/info"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tbCheckInOut"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>